crates/aranya-policy-compiler/tests/data/type_errors/struct_composition_non_struct_invalid_type.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid type: bool
  |
5 |         ...b
  |            ^ expected `struct T` but found `bool`
